--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="container mx-auto px-6 lg:px-20 py-12 text-center">
       <img src="images/aaron.jpg" alt="Aaron Rodriguez" class="mx-auto rounded-full w-48 h-48 border-4 border-white shadow-lg mb-6 object-cover">
       <h1 class="text-4xl lg:text-5xl font-extrabold mb-4">About Me</h1>
-      <p class="max-w-2xl mx-auto text-lg leading-relaxed">Hello there! I am Aaron Rodriguez, a Software Engineer from San Antonio, Texas, currently pursuing a Master’s in Artificial Intelligence at UT Austin. I approach tasks with positivity, organization, and a focus on timeliness. Whether working independently or leading a team, I’m committed to delivering efficient and precise results. I value diverse perspectives and embrace feedback as a tool for growth.</p>
-      <p class="mt-6 italic mb-4">When not working on my tech skills, I enjoy working out, running, cycling, and hiking, as well as giving back to the community.</p>
+      <p class="max-w-2xl mx-auto text-lg leading-relaxed">Hi, I’m Aaron Rodriguez — a Software Engineer from San Antonio, TX, and a Master’s student in Artificial Intelligence at UT Austin. I love building intelligent systems that solve real world problems.</p>
+      <p class="mt-6 mx-auto text-lg leading-relaxed mb-4">When my brain gets fried from studying & integrating models, you’ll probably find me working out, running, cycling, or hiking. </p>
       <h1 class="text-4xl lg:text-3xl font-extrabold mb-4">Fun Fact</h1>
       <span class="bg-white text-indigo-600 px-4 py-2 rounded-full font-medium">I can juggle</span>
       <span class="bg-white text-indigo-600 px-4 py-2 rounded-full font-medium">Rubik's cube in &lt;1min</span>
@@ -43,7 +43,7 @@
   <h2 class="text-3xl font-bold text-center text-indigo-600 mb-8">Resume</h2>
   <div class="max-w-3xl mx-auto bg-white rounded-xl shadow-lg p-6">
     <div class="text-gray-700">
-      <a href="https://drive.google.com/file/d/1JLFHiNQXZ7uTtECJ7bQvULt7z8Xq0xGt/view?usp=sharing" 
+      <a href="https://drive.google.com/file/d/1LF8T4-42BYLDsSqlk929K47f0bX8rtXb/view?usp=sharing" 
          class="text-indigo-600 underline hover:text-indigo-500 text-lg font-medium">
         View My Resume
       </a>
