--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </nav>
 
   <!-- Hero / About -->
-  <header id="about" class="bg-gradient-to-r from-red-600 to-blue-500 text-white">
+  <header id="about" class="bg-gradient-to-r from-gray-600 to-blue-500 text-white">
     <div class="container mx-auto px-6 lg:px-20 py-12 text-center">
       <img src="images/aaron.jpg" alt="Aaron Rodriguez" class="mx-auto rounded-full w-48 h-48 border-4 border-white shadow-lg mb-6 object-cover">
       <h1 class="text-4xl lg:text-5xl font-extrabold mb-4">About Me</h1>
@@ -88,10 +88,11 @@
             <h3 class="text-xl font-semibold mb-2 text-indigo-600">Digital Twin AI Assistant</h3>
             <p class="italic text-sm text-gray-600 mb-4">@ Personal Project</p>
             <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm">
-              <li>Designed a custom digital twin agent with PyTorch and transformer architectures.</li>
-              <li>Deployed on Pi Zero with TensorFlow Lite for predictive maintenance & real-time interactions.</li>
-              <li>Built batch-tokenization pipelines and optimized loss functions.</li>
-              <li>Integrated AWS SageMaker & CloudWatch for CI/CD and edge syncing.</li>
+              <li>Designed a custom digital twin agent leveraging PyTorch for building and training a customized transformer Model.</li>
+              <li>Deployed the system on a Pi Zero with TensorFlow Lite, enabling predictive maintenance & real time monitoring/interaction.</li>
+              <li>Developed efficient training pipelines with batching, tokenization, and loss optimization, ensuring scalable NLP solutions.</li>
+              <li>Integrated AWS Sagemaker & Cloudwatch to enable continuous retraining, automated deployment, and edge device syncing.</li>
+
             </ul>
           </div>
         </div>
@@ -103,10 +104,11 @@
             <h3 class="text-xl font-semibold mb-2 text-indigo-600">ARTEMIS Framework</h3>
             <p class="italic text-sm text-gray-600 mb-4">@ Lawrence Berkeley National Laboratory</p>
             <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm">
-              <li>Expanded ARTEMIS for electrodynamic modeling in quantum computing.</li>
-              <li>Containerized workflows with Docker for reproducible simulations.</li>
-              <li>Automated CI/CD on Azure for large-scale compute jobs.</li>
-              <li>Validated London penetration depth via full-wave methods.</li>
+              <li>Developed and debugged HPC algorithms for electrodynamic simulations using C++/Python & Azure Cloud, in a Agile team.</li>
+              <li>Designed and containerized workflows using Docker for consistent, reproducible simulation environments.</li>
+              <li>Leveraged Azure for automating CI/CD workflows and managing large-scale simulations on virtualized environments.</li>
+              <li>Utilized Linux terminal to manage HPC simulations, large datasets, and manage Git repos for collaborative development.</li>
+
             </ul>
             <a href="https://drive.google.com/drive/u/0/folders/1qjkYaE_pZ9kz88GmCzTYy1PDB3riOZru" class="inline-block mt-4 text-indigo-600 underline hover:text-indigo-500">View Poster</a>
           </div>
@@ -119,9 +121,10 @@
             <h3 class="text-xl font-semibold mb-2 text-indigo-600">Agent Librarian Chat Bot</h3>
             <p class="italic text-sm text-gray-600 mb-4">@ Personal Project</p>
             <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm">
-              <li>Built a RAG chatbot with LangChain, FAISS, and OpenAI.</li>
-              <li>Structured JSON knowledge base for accurate retrieval.</li>
-              <li>Implemented evaluation metrics to fine-tune embeddings.</li>
+              <li>Built a retrieval augmented chatbot that processes video/audio inputs, extracts the text transcripts, and matches them to relevant research papers using Langchain, FAISS, and OpenAI models.</li>
+              <li>Created a structed dataset in a JSON knowledge base containing research papers, ensuring high accuracy relevant retrieval.</li>
+              <li>Implemented accuracy evaluation metrics to continuously improve the retrieval performance, fine tuning embeddings.</li>
+
             </ul>
           </div>
         </div>
