--- a/index.html
+++ b/index.html
@@ -97,6 +97,23 @@
           </div>
         </div>
 
+                <!-- Marathon Sim -->
+        <div class="bg-white rounded-lg shadow-lg overflow-hidden group hover:shadow-2xl transition-shadow">
+          <img src="images/Marathon.jpg" alt="Marathon Simulator" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+          <div class="p-6">
+            <h3 class="text-xl font-semibold mb-2 text-indigo-600">Marathon Simulator</h3>
+            <p class="italic text-sm text-gray-600 mb-4">@ Personal Project</p>
+            <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm">
+              <li>Simulated race performance on real-world marathon routes using Strava activity data and geospatial elevation profiles.</li>
+              <li>Built a predictive model to estimate per-segment running pace as a function of elevation grade and fatigue, using personal Strava training data.</li>
+              <li>Parsed GPX files of official marathon courses and applied a regression-based simulator to forecast finishing time and pace distribution.</li>
+              <li>Applied geospatial preprocessing and trained a linear regression model conditioned on terrain difficulty and distance progression.</li>
+              <li>Simulated the entire marathon route, applying the model to estimate my per-segment pace and total finish time.</li>
+
+            </ul>
+          </div>
+        </div>
+
         <!-- ARTEMIS Framework -->
         <div class="bg-white rounded-lg shadow-lg overflow-hidden group hover:shadow-2xl transition-shadow">
           <img src="images/artemis.jpg" alt="ARTEMIS Framework" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
