--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img src="images/aaron.jpg" alt="Aaron Rodriguez" class="mx-auto rounded-full w-48 h-48 border-4 border-white shadow-lg mb-6 object-cover">
       <h1 class="text-4xl lg:text-5xl font-extrabold mb-4">About Me</h1>
       <p class="max-w-2xl mx-auto text-lg leading-relaxed">Hi, I’m Aaron Rodriguez — a Software Engineer from San Antonio, TX, and a Master’s student in Artificial Intelligence at UT Austin. I love building intelligent systems that solve real world problems.</p>
-      <p class="mt-6 mx-auto text-lg leading-relaxed mb-4">When my brain gets fried from studying & integrating models, you’ll probably find me working out, running, cycling, or hiking. </p>
+      <p class="mt-6 mx-auto text-lg leading-relaxed mb-4">When I am not deep diving into model architecures, you’ll probably find me working out, running, cycling, or hiking. </p>
       <h1 class="text-4xl lg:text-3xl font-extrabold mb-4">Fun Fact</h1>
       <span class="bg-white text-indigo-600 px-4 py-2 rounded-full font-medium">I can juggle</span>
       <span class="bg-white text-indigo-600 px-4 py-2 rounded-full font-medium">Rubik's cube in &lt;1min</span>
@@ -99,7 +99,7 @@
 
                 <!-- Marathon Sim -->
         <div class="bg-white rounded-lg shadow-lg overflow-hidden group hover:shadow-2xl transition-shadow">
-          <img src="images/Marathon.jpg" alt="Marathon Simulator" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+          <img src="images/marathon.jpg" alt="Marathon Simulator" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2 text-indigo-600">Marathon Simulator</h3>
             <p class="italic text-sm text-gray-600 mb-4">@ Personal Project</p>
