New Version with links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
         <div class="bg-white rounded-lg shadow-lg overflow-hidden group hover:shadow-2xl transition-shadow">
           <img src="images/digital_twin.jpg" alt="Digital Twin AI Assistant" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
           <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2 text-indigo-600">Digital Twin AI Assistant</h3>
+            <h3 class="text-xl font-semibold mb-2 text-indigo-600">
+            <a href="https://github.com/AaronRodriguez1/Digital_Twin_Project" target="_blank" rel="noopener noreferrer" class="hover:underline">
+            Digital Twin AI Assistant - 🔗 View Code
+              </a>
+              </h3>
             <p class="italic text-sm text-gray-600 mb-4">@ Personal Project</p>
             <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm">
               <li>Designed a custom digital twin agent leveraging PyTorch for building and training a customized transformer Model.</li>
@@ -98,10 +102,15 @@
         </div>
 
                 <!-- Marathon Sim -->
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden group hover:shadow-2xl transition-shadow">
+        
+        </a><div class="bg-white rounded-lg shadow-lg overflow-hidden group hover:shadow-2xl transition-shadow">
           <img src="images/marathon.jpg" alt="Marathon Simulator" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
           <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2 text-indigo-600">Marathon Simulator</h3>
+            <h3 class="text-xl font-semibold mb-2 text-indigo-600">
+            <a href="https://github.com/AaronRodriguez1/Marathon_Simulator" target="_blank" rel="noopener noreferrer" class="hover:underline">
+            Marathon Simulator - 🔗 View Code
+              </a>
+              </h3>
             <p class="italic text-sm text-gray-600 mb-4">@ Personal Project</p>
             <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm">
               <li>Simulated race performance on real-world marathon routes using Strava activity data and geospatial elevation profiles.</li>
@@ -109,6 +118,43 @@
               <li>Parsed GPX files of official marathon courses and applied a regression-based simulator to forecast finishing time and pace distribution.</li>
               <li>Applied geospatial preprocessing and trained a linear regression model conditioned on terrain difficulty and distance progression.</li>
               <li>Simulated the entire marathon route, applying the model to estimate my per-segment pace and total finish time.</li>
+
+            </ul>
+          </div>
+        </div>
+
+        <!-- SuperTuxKart Trajectory Planner -->
+<div class="bg-white rounded-lg shadow-lg overflow-hidden group hover:shadow-2xl transition-shadow">
+  <img src="images/supertuxkart.jpg" alt="SuperTuxKart Trajectory Planner" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+  <div class="p-6">
+                <h3 class="text-xl font-semibold mb-2 text-indigo-600">
+            <a href="https://github.com/AaronRodriguez1/SuperTuxKart" target="_blank" rel="noopener noreferrer" class="hover:underline">
+            SuperTuxKart Autonomous Racing - 🔗 View Code
+              </a>
+              </h3>
+    <p class="italic text-sm text-gray-600 mb-4">@ UT Austin – Deep Learning (Spring 2025)</p>
+    <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm">
+      <li>Developed PyTorch pipelines to predict vehicle waypoints using track boundaries and raw RGB images from the SuperTuxKart driving simulator.</li>
+      <li>Implemented three planners (MLP, Transformer, and CNN) with custom loss functions, data loaders, and learning rate schedulers.</li>
+      <li>Achieved &lt; 0.20 m longitudinal and &lt; 0.60 m lateral error; validated predictions by simulating autonomous driving in PySuperTuxKart.</li>
+    </ul>
+  </div>
+</div>
+
+        <!-- Agent Librarian Chat Bot -->
+        <div class="bg-white rounded-lg shadow-lg overflow-hidden group hover:shadow-2xl transition-shadow">
+          <img src="images/agent_librarian.jpg" alt="Agent Librarian Chat Bot" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+          <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-2 text-indigo-600">
+            <a href="https://github.com/AaronRodriguez1/agent_librarian" target="_blank" rel="noopener noreferrer" class="hover:underline">
+            Agent Librarian Chat Bot - 🔗 View Code
+              </a>
+              </h3>
+            <p class="italic text-sm text-gray-600 mb-4">@ Personal Project</p>
+            <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm">
+              <li>Built a retrieval augmented chatbot that processes video/audio inputs, extracts the text transcripts, and matches them to relevant research papers using Langchain, FAISS, and OpenAI models.</li>
+              <li>Created a structed dataset in a JSON knowledge base containing research papers, ensuring high accuracy relevant retrieval.</li>
+              <li>Implemented accuracy evaluation metrics to continuously improve the retrieval performance, fine tuning embeddings.</li>
 
             </ul>
           </div>
@@ -128,21 +174,6 @@
 
             </ul>
             <a href="https://drive.google.com/drive/u/0/folders/1qjkYaE_pZ9kz88GmCzTYy1PDB3riOZru" class="inline-block mt-4 text-indigo-600 underline hover:text-indigo-500">View Poster</a>
-          </div>
-        </div>
-
-        <!-- Agent Librarian Chat Bot -->
-        <div class="bg-white rounded-lg shadow-lg overflow-hidden group hover:shadow-2xl transition-shadow">
-          <img src="images/agent_librarian.jpg" alt="Agent Librarian Chat Bot" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
-          <div class="p-6">
-            <h3 class="text-xl font-semibold mb-2 text-indigo-600">Agent Librarian Chat Bot</h3>
-            <p class="italic text-sm text-gray-600 mb-4">@ Personal Project</p>
-            <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm">
-              <li>Built a retrieval augmented chatbot that processes video/audio inputs, extracts the text transcripts, and matches them to relevant research papers using Langchain, FAISS, and OpenAI models.</li>
-              <li>Created a structed dataset in a JSON knowledge base containing research papers, ensuring high accuracy relevant retrieval.</li>
-              <li>Implemented accuracy evaluation metrics to continuously improve the retrieval performance, fine tuning embeddings.</li>
-
-            </ul>
           </div>
         </div>
 
