--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <!-- SuperTuxKart Trajectory Planner -->
 <div class="bg-white rounded-lg shadow-lg overflow-hidden group hover:shadow-2xl transition-shadow">
-  <img src="images/supertuxkart.jpg" alt="SuperTuxKart Trajectory Planner" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+  <img src="images/Supertuxkart.jpg" alt="SuperTuxKart Trajectory Planner" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
   <div class="p-6">
                 <h3 class="text-xl font-semibold mb-2 text-indigo-600">
             <a href="https://github.com/AaronRodriguez1/SuperTuxKart" target="_blank" rel="noopener noreferrer" class="hover:underline">
