Update version of index.html

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <ul class="list-disc list-inside space-y-2 text-gray-700 text-sm">
       <li>Built a science‑demo app in Python & Glide for community outreach.</li>
       <li>Enabled students to explore 17 interactive video demos.</li>
-      <li>App live at <a href="https://glideapp.io" class="text-indigo-600 underline hover:text-indigo-500">Fiesta of Physics</a>.</li>
+      <li>App live at <a href="https://tasty-night-9160.glideapp.io/dl/6471c6" class="text-indigo-600 underline hover:text-indigo-500">Fiesta of Physics</a>.</li>
     </ul>
     <a href="https://drive.google.com/file/d/1crPgY2u0qgCBQIpXLqSnqvTybCT-aQMy/view?usp=sharing" class="inline-block mt-4 text-indigo-600 underline hover:text-indigo-500">View Poster</a>
   </div>
@@ -307,7 +307,7 @@
       <h4 class="text-xl font-semibold mb-2">Let's Connect</h4>
       <p class="mb-4">Feel free to reach out via email at <a href="aaronnathanrodriguez@gmail.com" class="underline hover:text-indigo-200">aaronnathanrodriguez@gmail.com</a>.</p>
      
-      <p class="mb-4">Feel free to reach out via Linkedin <a href="www.linkedin.com/in/ARSTMU" class="underline hover:text-indigo-200">Linkedin</a>.</p>
+      <p class="mb-4">Feel free to reach out via Linkedin <a href="https://www.linkedin.com/in/ARSTMU" class="underline hover:text-indigo-200">Linkedin</a>.</p>
       <p class="text-sm opacity-75">&copy; 2025 Aaron Rodriguez — All rights reserved.</p>
     </div>
   </footer>
